# iotsentinel

./: .coverage  .coverage.RITIKs-MacBook-Pro.local.26317.XSXtzzTx  .editorconfig  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOM_RULES_GUIDE.md  DEPLOYMENT_IMPROVEMENTS_SUMMARY.md  DEVICE_BLOCKING_SETUP.md  IMPLEMENTATION_PROGRESS.md  IOT_FEATURES_IMPLEMENTATION_SUMMARY.md  LICENSE  MOBILE_RESPONSIVE_GUIDE.md  README.md  THREAT_INTEL_SETUP.md  deployment_guide.md  install.bat  install.sh  orchestrator.py  pyproject.toml  pytest.ini  requirements-pi.txt  requirements.txt  setup.py
.github/: CHANGELOG.md  CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
academic/: README.md  __init__.py  rtm_generator.py  test_academic_modules.py
agents/: __init__.py  security_agent.py
alerts/: __init__.py  alert_manager.py  alert_service.py  email_notifier.py  integration.py  integration_actions.py  integration_hub_adapter.py  integration_system.py  notification_dispatcher.py  push_notifiers.py  report_scheduler.py
capture/: __init__.py  zeek_log_parser.py
config/: config_manager.py  configure_ap.sh  configure_zeek.sh  default_config.json  init_database.py  migrate_device_metadata.py  monitoring_status.json  optimize_pi.sh  zeek_cleanup.sh  zeek_monitor.sh
dashboard/: TOAST_MIGRATION_GUIDE.md  __init__.py  app.py  app.py.backup  asset_build.py  shared.py
data/: architecture_docs_20251212_004436.json  bcs_evidence_20251212_004435.json  iot_monitor.db  iot_monitor.db-shm  (+4 more)
(+345 files in other folders)
